--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -1,8 +1,7 @@
-<h1>Twitter Word of Mouth</h1>
-<h3>Powered by your Customers' Love and ReferralCandy</h3>
+<%= render partial: 'header' %>
 
-<% @tweets.each do |tweet| %>
-  <div style="padding: 20px; margin-bottom: 10px; border-radius: 8px; border: 1px solid #CACFD2;">
-    <%= tweet %>
-  </div>
+<%= form_tag('/search', method: 'get') do %>
+  <%= label_tag 'campaign_id', 'Your Campaign ID' %>
+  <%= text_field_tag 'campaign_id', nil, placeholder: '108278' %>
+  <%= submit_tag('Submit') %>
 <% end %>
